--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Md. Shakil Ahmmed</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Web Developer, CEO of ELS Magazine, Gratitute to Nature</div>
+                    <div class="typed-text d-none">Tutor, Web Developer, CEO of ELS Magazine, Gratitute to Nature</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="Resume_MD_SHAKIL_AHMMED-protected.pdf" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
@@ -126,15 +126,15 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
-                            <h1 class="display-1 mb-0">03</h1>
+                            <h1 class="display-1 mb-0">04</h1>
                             <h5 class="mb-0">Years</h5>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a Web Developer & CEO of ELS Magazine.</h3>
+                        <h3 class="lh-base mb-0">of turoing experience as a House Tutor.</h3>
                     </div>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
+                    <p class="mb-4">প্রথম থেকে দশম শ্রেণি(বিজ্ঞান) সকল বিষয়।<br>একাদশ-দ্বাদশ বাংলা, ইংরেজি, আইসিটি, জীববিজ্ঞান।</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>সপ্তাহে ৫ দিন পড়ানো হয়।</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>প্রতি সপ্তাহে পরীক্ষা নেয়া হয়।</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>টপিকভিত্তিক শীট প্রদান করা হয়</p>
                     <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -175,8 +175,8 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">HTML</h6>
-                                    <h6 class="font-weight-bold">95%</h6>
+                                    <h6 class="font-weight-bold">ইংরেজি</h6>
+                                    <h6 class="font-weight-bold">৯৯%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -184,8 +184,8 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">CSS</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">আইসিটি</h6>
+                                    <h6 class="font-weight-bold">৮৫%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -193,8 +193,8 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">PHP</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">বাংলা</h6>
+                                    <h6 class="font-weight-bold">৯০%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -204,8 +204,8 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Javascript</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">বিজ্ঞান</h6>
+                                    <h6 class="font-weight-bold">৯০%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -213,8 +213,8 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Angular JS</h6>
-                                    <h6 class="font-weight-bold">95%</h6>
+                                    <h6 class="font-weight-bold">বিষয়ভিত্তিক</h6>
+                                    <h6 class="font-weight-bold">৯৫%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -222,8 +222,8 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Wordpress</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">কম্পিউটার স্কিল</h6>
+                                    <h6 class="font-weight-bold">৮৫%</h6>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -245,27 +245,27 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>UI Designer</h5>
+                                    <h5>গৃহ শিক্ষক</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">২০১৮ - বর্তমান</p>
+                                    <h6 class="mb-0">ঢাকা এবং চট্টগ্রাম</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>কোচিং এর লেকচারার</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">১৫ জানুয়ারি ২০২৩ - বর্তমান</p>
+                                    <h6 class="mb-0">মডার্ণ কোচিং সেন্টার</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5>প্রতিষ্ঠাতা, ELS Magazine</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">২০২০ - বর্তমান</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Product Designer</h5>
+                                    <h5>প্রতিষ্ঠাতা, Gratitude to Nature</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Web Designer</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Apps Designer</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">২০২০ - বর্তমান</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                             </div>
@@ -273,29 +273,13 @@
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>UI Design Course</h5>
+                                    <h5>Web-developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Cambridge University</h6>
+                                    <p class="text-primary mb-1">2021 - Present</p>
+                                    <h6 class="mb-0">Online</h6>
                                 </div>
-                                <div class="col-sm-6">
-                                    <h5>IOS Development</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Cambridge University</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Web Design</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Cambridge University</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Apps Design</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Cambridge University</h6>
-                                </div>
+                                
+                                
                             </div>
                         </div>
                     </div>
