--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 py-6 pb-0 pt-lg-0">
-                    <h3 class="text-primary mb-3">I'm</h3>
-                    <h1 class="display-3 mb-3">Md. Shakil Ahmmed</h1>
+                    <h3 class="text-primary mb-3">আমি</h3>
+                    <h1 class="display-3 mb-3">মোঃ শাকিল আহম্মেদ </h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Tutor, Web Developer, CEO of ELS Magazine, Gratitute to Nature</div>
+                    <div class="typed-text d-none">চট্টগ্রাম বিশ্ববিদ্যালয়ে, ইংরেজি বিভাগে অধ্যায়নরত, বিগত ৪ বছর যাবৎ বাসায় গিয়ে টিউশন পড়াচ্ছি।</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="Resume_MD_SHAKIL_AHMMED-protected.pdf" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
@@ -148,7 +148,7 @@
                     </div>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Happy Clients</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">১৫</h2>
                     </div>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                     <div class="d-flex align-items-center mb-3">
@@ -168,9 +168,9 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5">Skills & Experience</h1>
+                    <h1 class="display-5 mb-5">দক্ষতা এবং অভিজ্ঞতা</h1>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum clita dolor duo clita sit.</p>
-                    <h3 class="mb-4">My Skills</h3>
+                    <h3 class="mb-4">বিষয় ভিত্তিক আমার দক্ষতা</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
@@ -273,10 +273,10 @@
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>Web-developer</h5>
+                                    <h5> বি.এ (অনার্স), ইংরেজি বিভাগ</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2021 - Present</p>
-                                    <h6 class="mb-0">Online</h6>
+                                    <p class="text-primary mb-1">২০২২ - বর্তমান</p>
+                                    <h6 class="mb-0">চট্টগ্রাম বিশ্ববিদ্যালয়</h6>
                                 </div>
                                 
                                 
@@ -637,7 +637,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom text-secondary" href="mdshakilahmmed.pw">mdsakilahmmed.pw</a>, All Right Reserved.
+                        &copy; <a class="border-bottom text-secondary" href="shafolio.github.io">mdsakilahmmed</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
