--- a/index.html
+++ b/index.html
@@ -52,19 +52,20 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-                <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#skill" class="nav-item nav-link">Skills</a>
-                <a href="#service" class="nav-item nav-link">Services</a>
+                <a href="#home" class="nav-item nav-link active">হোম</a>
+                <a href="#about" class="nav-item nav-link">আমার সম্পর্কে</a>
+                <a href="#skill" class="nav-item nav-link">দক্ষতা</a>
+                <a href="#service" class="nav-item nav-link">কোর্স সমূহ</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-primary fw-bold m-0">ShaFolio</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
-                <a href="#project" class="nav-item nav-link">Projects</a>
-                <a href="#team" class="nav-item nav-link">Team</a>
-                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#project" class="nav-item nav-link">প্রজেক্ট</a>
+                <a href="#team" class="nav-item nav-link">টিম</a>
+                <a href="#testimonial" class="nav-item nav-link">বিশ্বস্ততা</a>
+                <a href="#contact" class="nav-item nav-link">যোগাযোগ 
+               </a>
             </div>
         </div>
     </nav>
@@ -148,12 +149,12 @@
                     </div>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Happy Clients</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">১৫</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">121</h2>
                     </div>
                     <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">1234</h2>
+                        <h5 class="border-end pe-3 me-3 mb-0">মোট শিক্ষার্থী পড়িয়েছি</h5>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">59</h2>
                     </div>
                     <p class="mb-0">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam amet diam ipsum clita labore dolor duo clita.</p>
                 </div>
@@ -260,13 +261,14 @@
                                     <h5>প্রতিষ্ঠাতা, ELS Magazine</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">২০২০ - বর্তমান</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <h6 class="mb-0">Online based
+                          </h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>প্রতিষ্ঠাতা, Gratitude to Nature</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">২০২০ - বর্তমান</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <h6 class="mb-0"> Online based </h6>
                                 </div>
                             </div>
                         </div>
@@ -295,10 +297,10 @@
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
-                    <h1 class="display-5 mb-0">My Services</h1>
+                    <h1 class="display-5 mb-0">কোর্স সমূহ</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">Hire Me</a>
+                    <a class="btn btn-primary py-3 px-5" href="">রেজিষ্ট্রেশন করুন</a>
                 </div>
             </div>
             <div class="row g-4">
@@ -308,8 +310,8 @@
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Creative Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
+                            <h4 class="mb-3">প্রথম থেকে দশম শ্রেণি</h4>
+                            <h6 class="mb-3">৫ দিন পড়ানো হয় (সপ্তাহে)<span class="text-primary">কোর্স ফি ৫০০০৳</span></h6>
                             <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
                         </div>
                     </div>
@@ -320,8 +322,8 @@
                             <i class="fa fa-code-branch fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Graphic Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
+                            <h4 class="mb-3">একাদশ-দ্বাদশ</h4>
+                            <h6 class="mb-3">সপ্তাহে ৫ দিন <span class="text-primary">৫০০০৳</span></h6>
                             <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
                         </div>
                     </div>
@@ -332,8 +334,8 @@
                             <i class="fa fa-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Web Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
+                            <h4 class="mb-3">ইংরেজি স্পোকেন কোর্স</h4>
+                            <h6 class="mb-3">৩ দিন (সপ্তাহে)<span class="text-primary">৩০০৳</span></h6>
                             <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo clita sit sed sit dolor eos.</span>
                         </div>
                     </div>
@@ -361,7 +363,7 @@
         <div class="container">
             <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
-                    <h1 class="display-5 mb-0">My Projects</h1>
+                    <h1 class="display-5 mb-0">কিছু প্রজেক্ট</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
                     <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
